<resources>
    <string name="app_name">chesstask</string>
    <string name="dialog_id">wrongMoveTag</string>
    <string name="win_dialog_id">winTag</string>

    <string name="wrong_move_dialog_title">You made a wrong move!\nYou can undo this move, restart task or exit.</string>
    <string name="chess_task_win_dialog_title">Congratulations! You solved task!</string>

    <string name="finish_button_title">Finish</string>
    <string name="restart_button_title">Restart</string>
    <string name="undo_move_button_title">Undo</string>
    <string name="exit_button_title">Exit</string>
    <string name="reveal_answer_button_title">Reveal Answer</string>
    <string name="task_label_title">Checkmate in %1$d turns</string>

    <string name="default_image_description">default image description</string>
    <string name="wrong_figure_error_message">Cant find figure with this id</string>
</resources>
